# acrac-web-code

./: .gitignore  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  README.md  deploy-prod.sh  deploy.bat  deploy.sh  diagnose-network.sh  docker-compose.prod.yml  docker-compose.yml  fix-and-deploy.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/app/config/: app_config.py  celery_app.py  config.py  database.py  redis_config.py
backend/app/dependencies/: dependency.py
backend/app/entity/: eval_entity.py  model_entity.py  retrieval_entity.py
backend/app/model/: __init__.py  acrac_models.py  clinical_data_models.py  evaluation.py  ragas_models.py  system_models.py
backend/app/prompt/: judge_prompt.py
backend/app/response/: response_factory.py  response_middleware.py  response_models.py
backend/app/schema/: IntelligentRecommendation_schemas.py  acrac_schemas.py  eval_schema.py  judge_schemas.py  ragas_schemas.py  rule_config_schemas.py  rule_packs_schemas.py
backend/docs/: acro.md  rag_recommend_api_flow.md  架构优化说明.md  评测接口api文档.md
backend/output_eval/: evaluation_all_20251203_131441.xlsx  evaluation_all_20251203_153558.xlsx  evaluation_all_20251203_154314.xlsx  evaluation_all_20251203_155841.xlsx  evaluation_all_20251203_171412.xlsx
backend/scripts/: PERFORMANCE_OPTIMIZATION_GUIDE.md  build_acrac_from_csv_siliconflow.py  build_eval_script.py  build_milvus_script.py  celery_monitor.py  celery_worker.py  clear_celery_redis.py  deploy_init.py  start_celery_worker.bat  start_celery_worker.sh
(+95 files in other folders)
