[project]
name = "acro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "dashscope>=1.24.9",
    "fastapi>=0.120.1",
    "injector>=0.22.0",
    "jieba>=0.42.1",
    "httpx>=0.27.0",
    "langchain>=1.0.3",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-postgres==0.0.16",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "redis>=7.0.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
